add connection string

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "Host=localhost;Port=5432;Database=demonsanddogs;Username=postgres;Password=\" \";"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
