--- a/DataAccess/DataAccess.csproj
+++ b/DataAccess/DataAccess.csproj
@@ -13,6 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\AppConstants\AppConstants.csproj" />
       <ProjectReference Include="..\Models\Models.csproj" />
     </ItemGroup>
 
