character sheet editor wip

--- a/DemonsAndDogs/DemonsAndDogs.csproj
+++ b/DemonsAndDogs/DemonsAndDogs.csproj
@@ -7,12 +7,15 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="MediatR" Version="14.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.8"/>
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.8" PrivateAssets="all"/>
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\API.Services\API.Services.csproj" />
+      <ProjectReference Include="..\Mediator\Mediator.csproj" />
+      <ProjectReference Include="..\UIComponents\UIComponents.csproj" />
     </ItemGroup>
 
 </Project>
