--- a/API.Services/API.Services.csproj
+++ b/API.Services/API.Services.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
       <ProjectReference Include="..\Models\Models.csproj" />
+      <ProjectReference Include="..\UIComponents\UIComponents.csproj" />
     </ItemGroup>
 
 </Project>
