--- a/UIComponents/UIComponents.csproj
+++ b/UIComponents/UIComponents.csproj
@@ -13,9 +13,11 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.8"/>
+        <PackageReference Include="Radzen.Blazor" Version="9.0.5" />
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\AppConstants\AppConstants.csproj" />
       <ProjectReference Include="..\Models\Models.csproj" />
     </ItemGroup>
 
