--- a/DemonsAndDogs/DemonsAndDogs.csproj
+++ b/DemonsAndDogs/DemonsAndDogs.csproj
@@ -10,6 +10,7 @@
         <PackageReference Include="MediatR" Version="14.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.8"/>
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.8" PrivateAssets="all"/>
+        <PackageReference Include="Radzen.Blazor" Version="9.0.5" />
     </ItemGroup>
 
     <ItemGroup>
