--- a/Mediator/Mediator.csproj
+++ b/Mediator/Mediator.csproj
@@ -16,7 +16,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Mediator\" />
+      <Folder Include="Mediator\Handlers\" />
     </ItemGroup>
 
 </Project>
