--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -12,4 +12,8 @@
       <PackageReference Include="Pgvector.EntityFrameworkCore" Version="0.3.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="APIContracts\" />
+    </ItemGroup>
+
 </Project>
