--- a/DemonsAndDogs/DemonsAndDogs.csproj
+++ b/DemonsAndDogs/DemonsAndDogs.csproj
@@ -14,6 +14,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\API.Client\API.Client.csproj" />
       <ProjectReference Include="..\API.Services\API.Services.csproj" />
       <ProjectReference Include="..\Mediator\Mediator.csproj" />
       <ProjectReference Include="..\UIComponents\UIComponents.csproj" />
