--- a/Mediator/Mediator.csproj
+++ b/Mediator/Mediator.csproj
@@ -11,12 +11,9 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\API.Client\API.Client.csproj" />
       <ProjectReference Include="..\AppConstants\AppConstants.csproj" />
       <ProjectReference Include="..\Models\Models.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Mediator\Handlers\" />
     </ItemGroup>
 
 </Project>
