--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -13,7 +13,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="APIContracts\" />
+      <Folder Include="Contracts\" />
+      <Folder Include="DTO\" />
     </ItemGroup>
 
 </Project>
