--- a/UIComponents/UIComponents.csproj
+++ b/UIComponents/UIComponents.csproj
@@ -21,4 +21,8 @@
       <ProjectReference Include="..\Models\Models.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="PageComponents\" />
+    </ItemGroup>
+
 </Project>
