Revert "junie be codin"
This reverts commit 0a5fe0a2da4c94fddebf86ae07cd0de252efdd57.

--- a/UIComponents/UIComponents.csproj
+++ b/UIComponents/UIComponents.csproj
@@ -18,8 +18,11 @@
 
     <ItemGroup>
       <ProjectReference Include="..\AppConstants\AppConstants.csproj" />
-      <ProjectReference Include="..\Mediator\Mediator.csproj" />
       <ProjectReference Include="..\Models\Models.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="PageComponents\" />
     </ItemGroup>
 
 </Project>
